[package]
name = "bevy-flair-html-extension"
version = "1.0.0"
edition = "2024"
description = "Extension for bevy_flair which adds basic HTML-like syntax with hot-reloading."
license = "MIT OR Apache-2.0"
authors = ["Amy Gilhespy <amyogilhespy@gmail.com>"]
repository = "https://github.com/AmyGilhespy/bevy-flair-html-extension"

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
	"bevy_asset",
	"bevy_input_focus",
	"bevy_picking",
	"bevy_ui",
] }
bevy_flair = "0.7.0"
serde = "1.0.228"
thiserror = "2.0.18"
